[AURA-25](feat): create commnet service
